fixes double scrollbar on chrome on pc

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -11,7 +11,6 @@ body {
 
 .debate-window {
   height:20rem;
-  overflow: scroll;
   display:inline-block;
   min-width:100%;
   width:100%;
